--- a/src/app/admin/subnav.component.html
+++ b/src/app/admin/subnav.component.html
@@ -1,7 +1,9 @@
-<nav class="admin-nav navbar navbar-expand navbar-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
+  <div class="container-fluid">
     <div class="navbar-nav">
-        <a routerLink="/admin/accounts" routerLinkActive="active" class="nav-item nav-link">Accounts</a>
-        <a routerLink="/admin/subjects" routerLinkActive="active" class="nav-item nav-link">Subjects</a>
-        <a routerLink="/admin/assignments" routerLinkActive="active" class="nav-item nav-link">Teacher Assignments</a>
+      <a class="nav-link" routerLink="/admin/accounts" routerLinkActive="active">Accounts</a>
+      <a class="nav-link" routerLink="/admin/subjects" routerLinkActive="active">Subjects</a>
+      <a class="nav-link" routerLink="/admin/assignments" routerLinkActive="active">Teacher Assignments</a>
     </div>
+  </div>
 </nav>
