--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,24 +30,25 @@
         >
       </li>
       
-      <li *ngIf="account.role === Role.SuperAdmin" class="nav-item">
+      <li *ngIf="account.role === Role.Admin" class="nav-item">
         <a routerLink="/admin/accounts" routerLinkActive="active" class="nav-link text-white"
           >Accounts</a
+        >
+      </li>
+      <li *ngIf="account.role === Role.Admin" class="nav-item">
+        <a routerLink="/admin/subjects" routerLinkActive="active" class="nav-link text-white"
+          >Subjects</a
+        >
+      </li>
+      <li *ngIf="account.role === Role.Admin" class="nav-item">
+        <a routerLink="/admin/assignments" routerLinkActive="active" class="nav-link text-white"
+          >Teacher Assignments</a
         >
       </li>
       <li class="nav-item" *ngIf="account.role === Role.Teacher">
         <a routerLink="/subject" routerLinkActive="active" class="nav-link text-white"
           >Subjects</a
         >
-      <li class="nav-item" *ngIf="account.role === Role.Admin">
-      <a routerLink="/" routerLinkActive="active" class="nav-link text-white"
-        >Subjects List</a
-      >
-      </li>
-      <li class="nav-item" *ngIf="account.role === Role.Admin">
-      <a routerLink="/" routerLinkActive="active" class="nav-link text-white"
-        >Subject Assignments</a
-      >
       </li>
       <li class="nav-item" *ngIf="account.role === Role.Student">
         <a routerLink="/" routerLinkActive="active" class="nav-link text-white"
