adding loading effects

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,12 @@
-<p class="text-center text-sm text-gray-600">
+<p class="text-center text-sm text-gray-600 m-0">
   🚧 We appreciate your time in using this system during its beta phase.
-Your feedback is valuable in helping us refine and enhance the experience.
 </p>
+
+<p class="text-center text-sm text-gray-600 m-0">
+  Your feedback is valuable in helping us refine and enhance the experience.
+</p>
+
+
 
 <div class="app-container d-flex" [ngClass]="{ 'bg-light': account }">
   <!-- main nav -->
