--- a/src/app/subject/subject-list.component.html
+++ b/src/app/subject/subject-list.component.html
@@ -1,5 +1,11 @@
 <h1>Subjects</h1>
 
+<div *ngIf="loading" class="text-center my-4">
+  <div class="spinner-border text-primary" role="status">
+    <!-- <span class="visually-hidden">Loading...</span> -->
+  </div>
+</div>
+
 <table class="table table-hover table-sm">
   <thead>
     <tr>
