--- a/src/app/teacher/student-list.component.html
+++ b/src/app/teacher/student-list.component.html
@@ -32,6 +32,6 @@
   <div class="d-flex align-items-center">
     <button type="submit" class="mr-3 btn btn-sm btn-primary">Submit Selected</button>
 
-  <a class="btn btn-success btn-sm" [routerLink]="['/subject', id]">Go to ECR</a>
+  <a class="btn btn-success btn-sm" [routerLink]="['/teacher', id]">Go to ECR</a>
   </div>
 </form>
