--- a/src/app/teacher/ECR/quarterly-grade-sheet.component.html
+++ b/src/app/teacher/ECR/quarterly-grade-sheet.component.html
@@ -52,6 +52,11 @@
   </tbody>
 </table>
 
+<div *ngIf="loading" class="d-flex justify-content-center align-items-center my-5" style="min-height: 150px;">
+  <div class="spinner-border text-primary" role="status"></div>
+</div>
+
+
 <div class="teacher-name">
   Subject Teacher: <strong> {{ account.firstName }} {{ account.lastName }} </strong>
 </div>
