--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,7 @@
         routerLinkActive="active"
         [routerLinkActiveOptions]="{ exact: true }"
       >
-        <img src="../assets/images/bc logo.png" width="100" alt="">
+        <img src="../assets/images/bc logo.png" width="100" height="100" alt="bc logo">
       </h4>
     </div>
     <ul class="nav flex-column">
