--- a/src/app/teacher/ECR/add-edit-score.component.html
+++ b/src/app/teacher/ECR/add-edit-score.component.html
@@ -2,29 +2,32 @@
   <h4 class="m-0">{{ quarter }}: {{ type }}</h4>
 </div>
 
-<p>quiz id: {{ id }}</p>
+<!-- <p>quiz id: {{ id }}</p> -->
 
-<form [formGroup]="form" (ngSubmit)="onSubmit()" >
+<form [formGroup]="form" (ngSubmit)="onSubmit()">
   <div class="d-flex justify-content-end mb-4">
     <!-- if it is addMode, change button to Add, else, Update -->
     <button class="btn btn-primary" type="submit">
-       {{ isAddMode ? 'Add Scores' : 'Update Scores' }}
-    </button> 
+      {{ isAddMode ? "Add Scores" : "Update Scores" }}
+    </button>
   </div>
 
   <table class="table table-bordered table-hover table-sm">
     <thead>
       <tr>
-        <th style="width: 1%;">Enrollment ID</th>
-        <th style="width: 10%;">Lastname</th>
-        <th style="width: 10%;">Firstname</th>
-        <th style="width: 5%;">Score</th>
-        <th style="width: 5%;">Perfect Score</th>
+        <!-- <th style="width: 1%;">Enrollment ID</th> -->
+        <th style="width: 10%">Lastname</th>
+        <th style="width: 10%">Firstname</th>
+        <th style="width: 5%">Score</th>
+        <th style="width: 5%">Perfect Score</th>
       </tr>
     </thead>
     <tbody *ngIf="students && students.length > 0; else noStudents">
-      <tr *ngFor="let student of students; let i = index" [formGroup]="scores.at(i)">
-        <td>{{ student.enrollment_id }}</td>
+      <tr
+        *ngFor="let student of students; let i = index"
+        [formGroup]="scores.at(i)"
+      >
+        <!-- <td>{{ student.enrollment_id }}</td> -->
         <td>{{ student.lastName }}</td>
         <td>{{ student.firstName }}</td>
         <td>
@@ -43,11 +46,15 @@
     </tbody>
 
     <ng-template #noStudents>
-    <tbody>
-      <tr>
-        <td colspan="10" class="h1 text-center">No students found meyn</td>
-      </tr>
-    </tbody>
-  </ng-template>
+      <tbody>
+        <tr>
+          <td colspan="10" class="h1 text-center">
+            {{
+              isAddMode ? "No new students found." : "No old students found."
+            }}
+          </td>
+        </tr>
+      </tbody>
+    </ng-template>
   </table>
 </form>
