--- a/src/app/teacher/student-list.component.html
+++ b/src/app/teacher/student-list.component.html
@@ -1,9 +1,16 @@
 <form (ngSubmit)="submitEnrollmentDecisions()" class="py-4">
   <h3>Students partially enrolled in this subject</h3>
-  <table class="table table-hover table-sm"> 
+  <table class="table table-hover table-sm">
     <thead>
       <tr>
-        <th style="width: 5%;"><input type="checkbox" [(ngModel)]="selectAll" (change)="toggleSelectAll()" name="selectAll" /></th>
+        <th style="width: 5%">
+          <input
+            type="checkbox"
+            [(ngModel)]="selectAll"
+            (change)="toggleSelectAll()"
+            name="selectAll"
+          />
+        </th>
         <!-- <th style="width: 10%;">Enrollment Id</th> -->
         <th style="width: 20%">Lastname</th>
         <th style="width: 20%">Firstname</th>
@@ -14,10 +21,19 @@
       </tr>
     </thead>
     <tbody>
+      <tr *ngIf="!isLoading && students.length === 0">
+        <td colspan="7" class="text-center">
+          <h5 class="m-0">No students has been found.</h5>
+        </td>
+      </tr>
       <tr *ngFor="let student of students; let i = index">
         <td>
-          <input type="checkbox" [(ngModel)]="student.selected" name="selected{{i}}" />
-        </td> 
+          <input
+            type="checkbox"
+            [(ngModel)]="student.selected"
+            name="selected{{ i }}"
+          />
+        </td>
         <!-- <td>{{ student.enrollment_id }}</td> -->
         <td>{{ student.lastName }}</td>
         <td>{{ student.firstName }}</td>
@@ -30,8 +46,12 @@
   </table>
 
   <div class="d-flex align-items-center">
-    <button type="submit" class="mr-3 btn btn-sm btn-primary">Submit Selected</button>
+    <button type="submit" class="mr-3 btn btn-sm btn-primary">
+      Submit Selected
+    </button>
 
-  <a class="btn btn-success btn-sm" [routerLink]="['/teacher', id]">Go to ECR</a>
+    <a class="btn btn-success btn-sm" [routerLink]="['/teacher', id]"
+      >Go to ECR</a
+    >
   </div>
 </form>
