--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
-<p class="text-center text-sm text-gray-600 m-0">
+<!-- <p class="text-center text-sm text-gray-600 m-0">
   🚧 We appreciate your time in using this system during its beta phase.
 </p>
 
 <p class="text-center text-sm text-gray-600 m-0">
   Your feedback is valuable in helping us refine and enhance the experience.
-</p>
+</p> -->
 
 
 
