--- a/src/app/teacher/ECR/quarterly-grade-sheet.component.html
+++ b/src/app/teacher/ECR/quarterly-grade-sheet.component.html
@@ -3,8 +3,8 @@
   <button class="btn btn-sml btn-primary" (click)="printGradeSheet()">Print Grade</button>
 </div>
 
-<div id="print-header" class="mb-4">
-  <h3 class="text-center">{{ quarter }} Grade Sheet</h3>
+<div id="print-header" class="mb-4 d-flex justify-content-center">
+  <strong>Grading Period: {{ quarter | uppercase  }}</strong>
 </div>
 
 <table class="table table-bordered table-hover table-sm">
@@ -56,7 +56,3 @@
   <div class="spinner-border text-primary" role="status"></div>
 </div>
 
-
-<div class="teacher-name">
-  Subject Teacher: <strong> {{ account.firstName }} {{ account.lastName }} </strong>
-</div>
