--- a/src/app/student/egrade.component.html
+++ b/src/app/student/egrade.component.html
@@ -17,14 +17,18 @@
   <table class="table table-hover table-sm">
     <thead>
       <tr>
-        <th style="width: 50%">Subject Name</th>
-        <th style="width: 5%">1st Qtr</th>
-        <th style="width: 5%">2nd Qtr</th>
-        <th style="width: 5%">Final</th>
+        <th style="width: 30%">Subject Name</th>
+        <th style="width: 10%">Subject Type</th>
+        <th style="width: 15%">Teacher</th>
+        <th style="width: 10%">First Quarter</th>
+        <th style="width: 10%">Second Quarter</th>
+        <th style="width: 10%">Final</th>
       </tr>
     </thead>
     <tbody>
       <td>Oral Communication</td>
+      <td>Core</td>
+      <td>Leny yamillo</td>
       <td>90</td>
       <td>89</td>
       <td>90</td>
