--- a/src/app/teacher/student-list.component.html
+++ b/src/app/teacher/student-list.component.html
@@ -16,8 +16,8 @@
         <th style="width: 20%">Firstname</th>
         <th style="width: 5%">Sex</th>
         <th style="width: 20%">Address</th>
-        <th style="width: 20%">Name of Guardian</th>
-        <th style="width: 20%">Contact Number</th>
+        <!-- <th style="width: 20%">Name of Guardian</th>
+        <th style="width: 20%">Contact Number</th> -->
       </tr>
     </thead>
     <tbody>
@@ -39,8 +39,8 @@
         <td>{{ student.firstName }}</td>
         <td>{{ student.sex }}</td>
         <td>{{ student.address }}</td>
-        <td>{{ student.guardian_name }}</td>
-        <td>{{ student.guardian_contact }}</td>
+        <!-- <td>{{ student.guardian_name }}</td>
+        <td>{{ student.guardian_contact }}</td> -->
       </tr>
     </tbody>
   </table>
